# workmate

./: .gitignore  README.md  main.py  pyproject.toml  services.py
tests/: test_service.py
